--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "docker_deploy"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 pyyaml = "^6.0.2"
+ansible = "^11.1.0"
 
 
 [build-system]
